syntax = "proto3";
package proto;

service UserService {
    rpc SignUp (ReqSignUp) returns (RespSignUp) {
    }
    rpc SignIn (ReqSignIn) returns (RespSignIn) {
    }
    rpc UserInfo(ReqUserInfo) returns (RespUserInfo){
    }
}

message ReqSignUp {
    string username = 1;
    string password = 2;
}

message RespSignUp {
    int32 code = 1;
    string message = 2;
}

message ReqSignIn {
    string username = 1;
    string password = 2;
}

message RespSignIn {
    int32 code = 1;
    string token = 2;
    string message = 3;
}

message ReqUserInfo{
    string username=1;
}

message RespUserInfo {
    int32 code = 1;
    string message =2;
    string username =3;
    string email = 4;
    string phone = 5;
    string signupAt = 6;
    string lastActiveAt = 7;
    int32 status = 8;
}